# cmc-ctm-matrix-algos

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
Algos/: CMakeLists.txt  graphics.ipynb
Algos/benchmarks/: CMakeLists.txt  multiply.cpp
Algos/src/: matrix.cpp  matrix.h
Algos/tests/: CMakeLists.txt  QR_decomposition.cpp
QR_decomposition/: CMakeLists.txt  CMakeUserPresets.json  graphics.ipynb
QR_decomposition/benchmark/: CMakeLists.txt  QR_decomposition.cpp
QR_decomposition/benchmarks/: CMakeLists.txt  qr_decomposition.cpp  results_history.txt
QR_decomposition/include/: matrix.h  qr_decomposition.h
QR_decomposition/src/: CMakeLists.txt  QR_decomposition.cpp  QR_decomposition.h  common.h  matrix.cpp  matrix.h  qr_decomposition.cpp  qr_decomposition.h  vector.cpp  vector.h
QR_decomposition/test/: CMakeLists.txt  QR_decomposition.cpp  test.cpp
QR_decomposition/tests/: CMakeLists.txt  main.cpp  qr_decomposition.cpp
QR_decomposition_using_boost/src/: QR.cpp  QR.h  QR_test.cpp
algos/: CMakeLists.txt  graphics.ipynb
algos/benchmarks/: CMakeLists.txt  multiply.cpp  parallel_multiply.csv  qr_decomposition.cpp  qr_decomposition.csv
algos/src/: CMakeLists.txt  matrix.cpp  matrix.h  qr_decomposition.cpp  qr_decomposition.h  vector.cpp
algos/tests/: CMakeLists.txt  main.cpp  multiply_base.h  multiply_block.cpp  multiply_parallel.cpp  qr_decomposition.cpp
basic_la/: matrix.cpp  matrix.h  vector.cpp  vector.h
conjugate_gradient/: CMakeLists.txt  conjugate_gradient.cpp  conjugate_gradient.h
cpp_examples/benchmarks/: block_vs_parallel.csv  multiply.csv  qr_decomposition.cpp
cpp_examples/src/: matrix.cpp  matrix.h  qr_decomposition.cpp  vector.cpp
cpp_examples/tests/: multiply_base.h  qr_decomposition.cpp
fortran_examples/: CMakeLists.txt  README.md
fortran_examples/src/: lu.f90  main  main.f90  matrix.f90
la_library/: CMakeLists.txt  matrix.cpp  matrix.h  vector.cpp  vector.h
python_examples/: main.py
qr_decomposition/: CMakeLists.txt  matrix.cpp  matrix.h  qr_decomposition.cpp  qr_decomposition.h  run.cpp  test.cpp  vector.cpp
src/: QR.cpp  QR.h  QR_test.cpp  common.h  main.cpp
